[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/scenes/main.gd" type="Script" id=1]
[ext_resource path="res://assets/background.png" type="Texture" id=2]
[ext_resource path="res://assets/intro/intro_.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 1600, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 1920, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 2240, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 2560, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 2880, 0, 320, 180 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 3200, 0, 320, 180 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="MainScene" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 160, 90 )
texture = ExtResource( 2 )

[node name="intro_animation" type="AnimatedSprite" parent="."]
position = Vector2( 160, 90 )
frames = SubResource( 12 )

[node name="delay_antes_intro" type="Timer" parent="."]
one_shot = true

[node name="delay_apos_intro" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="animation_finished" from="intro_animation" to="." method="_on_intro_animation_animation_finished"]
[connection signal="timeout" from="delay_antes_intro" to="." method="_on_delay_antes_intro_timeout"]
[connection signal="timeout" from="delay_apos_intro" to="." method="_on_delay_apos_intro_timeout"]
